# post-blog

./: main.py  pyproject.toml
instance/: posts.db
templates/: index.html  make-post.html  post.html
