[project]
name = "day-67-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "bootstrap-flask==2.2.0",
    "flask==2.3.2",
    "flask-ckeditor==0.4.6",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "isort>=6.0.1",
    "sqlalchemy==2.0.25",
    "werkzeug==3.0.0",
    "wtforms==3.0.1",
]
